--- a/index.html
+++ b/index.html
@@ -4,8 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dev Board</title>
+    <!-- tailwind cdn -->
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- poppins font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              poppins: ["Poppins", "sans-serif"],
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body>
-    <h1>hello</h1>
+  <body class="font-poppins">
+    <header class="container mx-auto">
+      <!-- navbar starts -->
+      <div class="navbar bg-base-100 rounded-lg shadow-md p-5">
+        <div class="flex-1 flex items-center gap-3">
+          <img src="./assets/logo.png" class="p-2 w-12 h-12" alt="Logo" />
+          <!-- Increased size -->
+          <a class="text-3xl font-light"
+            >Dev <span class="font-semibold">Board</span></a
+          >
+          <!-- Bigger text -->
+        </div>
+
+        <div class="flex items-center gap-5">
+          <div class="flex items-center gap-2 bg-gray-100 px-4 py-2 rounded-lg">
+            <img src="./assets/checkbox.png" class="w-6 h-6" alt="Checkbox" />
+            <!-- Slightly bigger -->
+            <p class="amount text-xl font-medium">23</p>
+            <!-- Bigger text -->
+          </div>
+          <button>
+            <img
+              src="./assets/theme-btn.png"
+              class="w-10 h-10"
+              alt="Theme Button"
+            />
+            <!-- Bigger button -->
+          </button>
+        </div>
+      </div>
+
+      <!-- navbar ends -->
+    </header>
   </body>
 </html>
