--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <!-- Text Content -->
                 <div class="flex flex-col items-start">
                   <p class="text-gray-500 text-sm">Task Assigned</p>
-                  <p id="task-count" class="text-black text-2xl font-bold">6</p>
+                  <p id="task-count" class="text-black text-2xl font-bold"></p>
                 </div>
               </div>
             </div>
