--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             >
               Clear History
             </button>
-            <!-- Dashed Separator -->
+            <!-- activity container -->
             <div id="activity-log" class="activity-log my-5"></div>
           </div>
         </div>
