--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
     </div>
     <section class="container mx-auto bg-white mb-3 rounded-md">
       <div class="p-6 shadow-md">
-        <p class="p">
+        <p class="text-lg font-semibold">
           Question-1: What are the different ways to select an element in the
           DOM?
         </p>
@@ -86,7 +86,7 @@
     </section>
     <section class="container mx-auto bg-white rounded-md mb-3">
       <div class="p-6 shadow-md">
-        <p class="p">
+        <p class="text-lg font-semibold">
           Question-2: What is the difference between innerHTML, innerText, and
           textContent ?
         </p>
@@ -103,7 +103,9 @@
     </section>
     <section class="container mx-auto bg-white mb-3 rounded-md">
       <div class="p-6 shadow-md">
-        <p class="p">Question-3: What is event delegation in the DOM?</p>
+        <p class="text-lg font-semibold">
+          Question-3: What is event delegation in the DOM?
+        </p>
 
         <div class="border-t border-gray-300 my-4"></div>
         <p class="p">
@@ -118,10 +120,12 @@
     </section>
     <section class="container mx-auto bg-white rounded-md mb-3">
       <div class="p-6 shadow-md">
-        <p class="">Question-4: What is event bubbling in the DOM?</p>
+        <p class="text-lg font-semibold">
+          Question-4: What is event bubbling in the DOM?
+        </p>
 
         <div class="border-t border-gray-300 my-4"></div>
-        <p class="p">
+        <p class="">
           It is a process in DOM where an event is occured to a child node first
           and event runs and event bubbles to its parent node When an event
           occurs on an element, the event is first handled by the element
@@ -133,13 +137,13 @@
     </section>
     <section class="container mx-auto bg-white rounded-md mb-3">
       <div class="p-6 shadow-md">
-        <p class="">
+        <p class="text-lg font-semibold">
           Question-5: How do you create, add, and remove elements using
           JavaScript?
         </p>
 
         <div class="border-t border-gray-300 my-4"></div>
-        <p class="p">
+        <p class="">
           To create a element we have to use
           <span class="text-orange-600 italic">document.createElement()</span>
           method <br />
