--- a/index.html
+++ b/index.html
@@ -3,353 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dev Board</title>
-    <!-- tailwind cdn -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- poppins font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              poppins: ["Poppins", "sans-serif"],
-            },
-          },
-        },
-      };
-    </script>
+    <title>Bangla Janala</title>
   </head>
-  <body class="font-poppins bg-[#F4F7FF]">
-    <header class="container mx-auto">
-      <!-- navbar starts -->
-      <div class="navbar bg-base-100 rounded-lg shadow-md p-5">
-        <div class="flex-1 flex items-center gap-3">
-          <img src="./assets/logo.png" class="p-2 w-12 h-12" alt="Logo" />
-          <!-- Increased size -->
-          <a class="text-3xl font-light"
-            >Dev <span class="font-semibold">Board</span></a
-          >
-          <!-- Bigger text -->
-        </div>
-
-        <div class="flex items-center gap-5">
-          <div class="flex items-center gap-2 bg-gray-100 px-4 py-2 rounded-lg">
-            <img src="./assets/checkbox.png" class="w-6 h-6" alt="Checkbox" />
-            <!-- Slightly bigger -->
-            <p id="amount" class="text-xl font-medium">23</p>
-            <!-- Bigger text -->
-          </div>
-          <button id="bg-change-btn">
-            <img
-              src="./assets/theme-btn.png"
-              class="w-10 h-10"
-              alt="Theme Button"
-            />
-            <!-- Bigger button -->
-          </button>
-        </div>
-      </div>
-
-      <!-- navbar ends -->
-    </header>
-    <section class="container mx-auto my-5 bg-[#F4F7FF]">
-      <div class="flex w-full gap-4 shadow-md">
-        <!-- left container main section -->
-        <div class="flex-3 p-4 text-white w-3/4 shadow-md">
-          <div class="flex gap-4 w-full mb-10">
-            <!-- task assign -->
-            <div
-              class="bg-[#F4F7FF] p-6 rounded-xl shadow-md w-64 flex flex-col items-center justify-center text-center"
-            >
-              <div class="flex items-center gap-3">
-                <img
-                  src="./assets/checkbox.png"
-                  class="w-8 h-8"
-                  alt="Checkbox"
-                />
-                <!-- Text Content -->
-                <div class="flex flex-col items-start">
-                  <p class="text-gray-500 text-sm">Task Assigned</p>
-                  <p id="task-count" class="text-black text-2xl font-bold"></p>
-                </div>
-              </div>
-            </div>
-
-            <!-- discover box -->
-            <div
-              onclick="window.location.href='./blog.html'"
-              class="w-2/4 bg-[#3752FD] bg-gradient-to-r from-[#6C7FFA] to-[#9BA8F8] p-5 rounded-lg shadow-md flex items-center justify-center text-white text-xl font-semibold cursor-pointer"
-            >
-              <img
-                src="./assets/board.png"
-                class="w-24 h-24 mr-3"
-                alt="Calendar Icon"
-              />
-              <p>Discover Something <br />New Today!</p>
-            </div>
-
-            <!-- calendar box -->
-            <div
-              class="w-1/4 bg-gray-100 p-5 rounded-lg shadow-md flex items-center gap-2"
-            >
-              <img
-                src="./assets/calender.png"
-                class="w-8 h-8"
-                alt="Date Icon"
-              />
-              <p id="date" class="text-gray-700"></p>
-            </div>
-          </div>
-          <!-- card container starts -->
-          <div class="card-container grid grid-cols-3 gap-5">
-            <!-- 1st card -->
-            <div class="bg-[#F4F7FF] p-6 rounded-xl shadow-md">
-              <!-- Title Section -->
-              <p
-                class="text-gray-500 text-sm p-1 shadow rounded max-w-24 text-center"
-              >
-                Shop Ease
-              </p>
-              <h2 class="text-2xl font-medium mt-2 text-black">
-                Fix Mobile Button Issue
-              </h2>
-
-              <!-- Description Box -->
-              <div
-                class="bg-[#FFFFFF] p-3 rounded-lg mt-3 shadow-sm text-gray-600 text-md"
-              >
-                A card component has a figure, a body part, and inside body
-                there are title and actions parts
-              </div>
-
-              <!-- Deadline & Status -->
-              <div class="mt-4 flex justify-between items-center">
-                <div>
-                  <p class="text-gray-500 text-sm">Deadline</p>
-                  <p class="text-black font-medium">21 March 2025</p>
-                </div>
-                <button
-                  class="btn-task bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-medium"
-                >
-                  Completed
-                </button>
-              </div>
-            </div>
-            <!-- 1st card ends -->
-            <!-- 2nd card starts -->
-            <div class="bg-[#F4F7FF] p-6 rounded-xl shadow-md">
-              <!-- Title Section -->
-              <p
-                class="text-gray-500 text-sm p-1 shadow rounded max-w-24 text-center"
-              >
-                CloudSync
-              </p>
-              <h2 class="text-2xl font-medium mt-2 text-black">
-                Add Dark Mode
-              </h2>
-
-              <!-- Description Box -->
-              <div
-                class="bg-[#FFFFFF] p-3 rounded-lg mt-3 shadow-sm text-gray-600 text-md"
-              >
-                Store the user's preference in localStorage, update CSS
-                variables dynamically, and apply a smooth transition effect.
-              </div>
-
-              <!-- Deadline & Status -->
-              <div class="mt-4 flex justify-between items-center">
-                <div>
-                  <p class="text-gray-500 text-sm">Deadline</p>
-                  <p class="text-black font-medium">21 March 2025</p>
-                </div>
-                <button
-                  class="btn-task bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-medium"
-                >
-                  Completed
-                </button>
-              </div>
-            </div>
-            <!-- 2nd card ends -->
-            <!-- 3rd card starts -->
-            <div class="bg-[#F4F7FF] p-6 rounded-xl shadow-md">
-              <!-- Title Section -->
-              <p
-                class="text-gray-500 text-sm p-1 shadow rounded max-w-24 text-center"
-              >
-                SwiftPay
-              </p>
-              <h2 class="text-2xl font-medium mt-2 text-black">
-                Optimize Home page 
-              </h2>
-
-              <!-- Description Box -->
-              <div
-                class="bg-[#FFFFFF] p-3 rounded-lg mt-3 shadow-sm text-gray-600 text-md"
-              >
-                Debug using Chrome DevTools, check for overlapping elements, and
-                ensure onClick works properly and ensure onClick works properly
-              </div>
-
-              <!-- Deadline & Status -->
-              <div class="mt-4 flex justify-between items-center">
-                <div>
-                  <p class="text-gray-500 text-sm">Deadline</p>
-                  <p class="text-black font-medium">21 March 2025</p>
-                </div>
-                <button
-                  class="btn-task bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-medium"
-                >
-                  Completed
-                </button>
-              </div>
-            </div>
-            <!-- 3rd card ends -->
-            <!-- 4th card starts -->
-            <div class="bg-[#F4F7FF] p-6 rounded-xl shadow-md">
-              <!-- Title Section -->
-              <p
-                class="text-gray-500 text-sm p-1 shadow rounded max-w-24 text-center"
-              >
-                Meta
-              </p>
-              <h2 class="text-2xl font-medium mt-2 text-black">
-                Add new emoji 🤲
-              </h2>
-
-              <!-- Description Box -->
-              <div
-                class="bg-[#FFFFFF] p-3 rounded-lg mt-3 shadow-sm text-gray-600 text-md"
-              >
-                Debug using Chrome DevTools, check for overlapping elements, and
-                ensure onClick works properly and ensure onClick works properly
-              </div>
-
-              <!-- Deadline & Status -->
-              <div class="mt-4 flex justify-between items-center">
-                <div>
-                  <p class="text-gray-500 text-sm">Deadline</p>
-                  <p class="text-black font-medium">21 March 2025</p>
-                </div>
-                <button
-                  id="task-btn"
-                  class="btn-task bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-medium"
-                >
-                  Completed
-                </button>
-              </div>
-            </div>
-            <!-- 4th card ends -->
-            <!-- 5th card starts -->
-            <div class="bg-[#F4F7FF] p-6 rounded-xl shadow-md">
-              <!-- Title Section -->
-              <p
-                class="text-gray-500 text-sm p-1 shadow rounded max-w-24 text-center"
-              >
-                Google LLC
-              </p>
-              <h2 class="text-2xl font-medium mt-2 text-black">
-                Integrate OpenAI API
-              </h2>
-
-              <!-- Description Box -->
-              <div
-                class="bg-[#FFFFFF] p-3 rounded-lg mt-3 shadow-sm text-gray-600 text-md"
-              >
-                Debug using Chrome DevTools, check for overlapping elements, and
-                ensure onClick works properly and ensure onClick works properly
-              </div>
-
-              <!-- Deadline & Status -->
-              <div class="mt-4 flex justify-between items-center">
-                <div>
-                  <p class="text-gray-500 text-sm">Deadline</p>
-                  <p class="text-black font-medium">21 March 2025</p>
-                </div>
-                <button
-                  class="btn-task bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-medium"
-                >
-                  Completed
-                </button>
-              </div>
-            </div>
-            <!-- 5th card ends -->
-            <!-- 6th card starts -->
-            <div class="bg-[#F4F7FF] p-6 rounded-xl shadow-md">
-              <!-- Title Section -->
-              <p
-                class="task-card text-gray-500 text-sm p-1 shadow rounded max-w-24 text-center"
-              >
-                Glassdoar
-              </p>
-              <h2 class="text-2xl font-medium mt-2 text-black">
-                Improve Job searching
-              </h2>
-
-              <!-- Description Box -->
-              <div
-                class="bg-[#FFFFFF] p-3 rounded-lg mt-3 shadow-sm text-gray-600 text-md"
-              >
-                Debug using Chrome DevTools, check for overlapping elements, and
-                ensure onClick works properly and ensure onClick works properly
-              </div>
-
-              <!-- Deadline & Status -->
-              <div class="mt-4 flex justify-between items-center">
-                <div>
-                  <p class="text-gray-500 text-sm">Deadline</p>
-                  <p class="text-black font-medium">21 March 2025</p>
-                </div>
-                <button
-                  class="btn-task bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-medium"
-                >
-                  Completed
-                </button>
-              </div>
-            </div>
-            <!-- 6th card ends -->
-          </div>
-          <!-- card container ends -->
-        </div>
-
-        <!-- right container main section -->
-        <div class="flex-1 p-4 rounded-md shadow-md text-white w-1/4">
-          <div class="bg-white text-center">
-            <!-- Activity Log Title -->
-            <div
-              class="flex items-center pt-3 justify-center gap-2 text-gray-700 text-lg font-medium"
-            >
-              <img src="./assets/activity.png" alt="" />
-              <p>Activity Log</p>
-            </div>
-
-            <!-- Clear History Button -->
-            <button
-              id="clear-history"
-              class="mt-4 bg-blue-500 text-white px-4 py-2 rounded-lg text-sm font-medium shadow-md hover:bg-red-700"
-            >
-              Clear History
-            </button>
-            <!-- activity container -->
-            <div id="activity-log" class="activity-log my-5"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- script here -->
-    <script src="./script/utility.js"></script>
-    <script src="./script/randomBg.js"></script>
-    <script src="./script/task.js"></script>
-    <script src="./script/date.js"></script>
-    <!-- <script src="./script/test.js"></script> -->
+  <body>
+    <h1>Hello World</h1>
   </body>
 </html>
